--- a/new.html
+++ b/new.html
@@ -46,13 +46,13 @@
   <div class="main-section">
     <div class="side-bar">
       <ul class="side-bar-items">
-        <li class="side-bar-item side-bar-active">
-          <a href="#" class="sidebar-link"><img src="./assets/imgs/Icon ionic-ios-stats.png" alt="icon"
+        <li class="side-bar-item ">
+          <a href="/index.html" class="sidebar-link"><img src="./assets/imgs/Icon ionic-ios-stats.png" alt="icon"
               class="img-fluid" />
             Dashboard
           </a>
         </li>
-        <li class="side-bar-item">
+        <li class="side-bar-item side-bar-active">
           <a href="#" class="sidebar-link"><img src="./assets/imgs/Icon awesome-users.png" alt="icon"
               class="img-fluid" />
             New Client Invoice
